Fixes Sbt Issues (#185)
* Attempts to fix sbt plugin issues

* Renames plugin name to follow the sbt naming

* Migrates the plugin scripted sbt test

* Adds custom release process for the plugin